--- a/about-us/index.html
+++ b/about-us/index.html
@@ -8,18 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="../../../fonts.googleapis.com/cssc3d9.css?family=Rubik:400,700|Crimson+Text:400,400i" rel="stylesheet">
-  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="../fonts/icomoon/style.css">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/magnific-popup.css">
+  <link rel="stylesheet" href="../css/jquery-ui.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css">
+  <link rel="stylesheet" href="../css/owl.theme.default.min.css">
 
 
-  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="../css/aos.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <div class="site-blocks-cover inner-page" style="background-image: url('images/hero_1.jpg');">
+    <div class="site-blocks-cover inner-page" style="background-image: url('../images/hero_1.jpg');">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto align-self-center">
@@ -106,7 +106,7 @@
           <div class="col-md-6">
             <div class="block-16">
               <figure>
-                <img src="images/bg_1.jpg" alt="Image placeholder" class="img-fluid rounded">
+                <img src="../images/bg_1.jpg" alt="Image placeholder" class="img-fluid rounded">
                 <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span
                     class="icon-play"></span></a>
     
@@ -137,7 +137,7 @@
           <div class="col-md-6 order-md-2">
             <div class="block-16">
               <figure>
-                <img src="images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded">
+                <img src="../images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded">
                 <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span
                     class="icon-play"></span></a>
     
@@ -207,7 +207,7 @@
             <div class="block-38 text-center">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_1.jpg" alt="Image placeholder" class="mb-4">
+                  <img src="../images/person_1.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Elizabeth Graham</h3>
                   <p class="block-38-subheading">CEO/Co-Founder</p>
                 </div>
@@ -222,7 +222,7 @@
             <div class="block-38 text-center">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_2.jpg" alt="Image placeholder" class="mb-4">
+                  <img src="../images/person_2.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Jennifer Greive</h3>
                   <p class="block-38-subheading">Co-Founder</p>
                 </div>
@@ -237,7 +237,7 @@
             <div class="block-38 text-center">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_3.jpg" alt="Image placeholder" class="mb-4">
+                  <img src="../images/person_3.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Patrick Marx</h3>
                   <p class="block-38-subheading">Marketing</p>
                 </div>
@@ -252,7 +252,7 @@
             <div class="block-38 text-center">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_4.jpg" alt="Image placeholder" class="mb-4">
+                  <img src="../images/person_4.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Mike Coolbert</h3>
                   <p class="block-38-subheading">Sales Manager</p>
                 </div>
@@ -266,8 +266,6 @@
         </div>
       </div>
     </div>
-
-
     <footer class="site-footer">
       <div class="container">
         <div class="row">
@@ -275,8 +273,8 @@
 
             <div class="block-7">
               <h3 class="footer-heading mb-4">About Us</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                sed dolorum excepturi iure eaque, aut unde.</p>
+              <p>Our extensive experience serving pharmaceutical and medical products firms in all therapeutic areas has given us a deep knowledge of global commercial trends affecting the industry, including reimbursement issues.
+              </p>
             </div>
 
           </div>
@@ -294,9 +292,9 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Contact Info</h3>
               <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                <li class="email">emailaddress@domain.com</li>
+                <li class="address">103 Tanni Shopping City, Sylhet</li>
+                <li class="phone"><a href="tel://23923929210">+880 1700055512</a></li>
+                <li class="email">tannimedicinecenter@gmail.com</li>
               </ul>
             </div>
 
@@ -306,12 +304,8 @@
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank"
-                class="text-primary">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              <script>document.write(new Date().getFullYear());</script> All rights reserved | Tanni Medicine Center   
             </p>
           </div>
 
@@ -320,15 +314,15 @@
     </footer>
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/jquery-ui.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/jquery.magnific-popup.min.js"></script>
+  <script src="../js/aos.js"></script>
 
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
